app index overflow bug fix test3

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -4,10 +4,12 @@ body {
 
 body > main#splashscreen {
     box-sizing: border-box;
+    overflow-y: hidden;
 }
 
 body > main#splashscreen *, html > body > main#splashscreen *:before, html > body > main#splashscreen *:after {
     box-sizing: inherit;
+    overflow-y: hidden;
 }
 
 
@@ -20,4 +22,5 @@ html > body > webview {
     bottom: 0;
     left: 0;
     right: 0;
+    overflow-y: hidden;
 }
